--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@
 	}
 
 	.input {
-		@apply border border-gray-300 rounded text-white p-2;
+		@apply border border-gray-300 rounded text-white p-2 min-w-0;
 	}
 }
 
