--- a/src/styles.css
+++ b/src/styles.css
@@ -13,11 +13,11 @@
 	.input {
 		@apply border border-gray-300 rounded text-white p-2 min-w-0;
 	}
-	.input-error {
+	.error {
 		@apply border-2 border-red-500 bg-[rgba(255,0,0,0.1)];
 	}
-	.radio-error {
-		@apply border-2 border-red-500 bg-[rgba(255,0,0,0.1)];
+	.quiz-error {
+		@apply border-2 border-red-500 bg-[rgba(209,5,93,0.6)];
 	}
 	.container {
 		@apply min-w-[95%] max-w-[95%] m-0 mx-auto mb-5 bg-[rgb(34,14,34)] p-5 rounded-2xl shadow-[0_0_10px_rgba(114,0,104,0.692)];
