--- a/src/styles.css
+++ b/src/styles.css
@@ -55,6 +55,7 @@
 		color: var(--col-text-main);
 		box-shadow: 0 20px 25px -5px var(--col-primary-glow);
 		border-color: rgba(129, 140, 248, 0.2);
+		cursor: pointer;
 	}
 
 	.input {
